# outpost-RM-vision

./: README.md
bring_up/: CMakeLists.txt  package.xml
bring_up/config/: node_params.yaml  param_log.md
bring_up/launch/: mv_cam_bringup.launch.py  sim_virtual_bringup.launch.py  virtual_outpost.launch.py
hero_description/launch/: view_model.launch.py  view_model.rviz
mindvision_camera/launch/: mv_launch.py
mindvision_camera/src/: mv_camera_node.cpp
outpost_auto_aim/armor_detector/include/armor_detector/: armor.hpp  (+1 more)
outpost_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp
outpost_auto_aim/auto_aim_interfaces/: CMakeLists.txt  package.xml
outpost_auto_aim/auto_aim_interfaces/msg/: DebugTrackerInfo.msg  TargetOutpost.msg
outpost_auto_aim/outpost_autoaim_bringup/: CMakeLists.txt  package.xml
outpost_auto_aim/outpost_autoaim_bringup/config/: default.yaml
outpost_auto_aim/outpost_autoaim_bringup/launch/: auto_aim.launch.py
outpost_auto_aim/outpost_detector/: CMakeLists.txt  package.xml
outpost_auto_aim/outpost_detector/include/outpost_detector/: outpost_detector.hpp
outpost_auto_aim/outpost_detector/src/: outpost_detector.cpp
outpost_auto_aim/outpost_tracker/: CMakeLists.txt  debug_logs.md  package.xml
outpost_auto_aim/outpost_tracker/src/: extended_kalman_filter.cpp  runge_kutta.cpp  tracker.cpp  tracker_node.cpp  trajectory_slover.cpp
virtual_serial_driver/: CMakeLists.txt  debug_log.md  package.xml
virtual_serial_driver/config/: serial_driver.yaml
virtual_serial_driver/include/virtual_serial_driver/: virtual_serial_driver.hpp
virtual_serial_driver/launch/: serial_driver.launch.py
virtual_serial_driver/src/: virtual_serial_driver.cpp
(+5 files in other folders)
