<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bring_up</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="915800506@qq.com">hecate</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>outpost_detector</depend>
  <depend>outpost_tracker</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>hero_description</depend>
  <depend>virtual_serial_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
